--- a/templates/SQL.xml
+++ b/templates/SQL.xml
@@ -2,7 +2,7 @@
   <template name="s" value="select * from $table$ where $END$;" description="select specific rows from a table" toReformat="false" toShortenFQNames="false">
     <variable name="table" expression="complete()" defaultValue="" alwaysStopAt="true" />
     <context>
-      <option name="SQL" value="true" />
+      <option name="SQL_STATEMENT" value="true" />
     </context>
   </template>
   <template name="sc" value="select count(*) from $table$ $alias$ where $alias$.$END$;" description="select the number of specific rows in a table" toReformat="true" toShortenFQNames="false">
